# cc-apiswitcher

./: .gitignore  CHANGELOG_v1.2.md  IMAGE_CROP_README.md  LICENSE  README.md  api_test_example.py  build.py  cc_switcher.py  config_switching_explanation.md  demo_configs.json  image_crop_tool.py  models_config.json  pyproject.toml  run_as_admin.bat  run_improved_version.py  sample_configs.json  testAPI.py  test_fix.py
