[project]
name = "cc-apiswitch"
version = "1.0.0"
description = "专业的Claude API配置切换管理工具，支持项目快速启动"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller>=6.14.2",
    "requests>=2.31.0",
    "wxpython>=4.2.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"  # "off", "basic", "standard", "strict"
pythonVersion = "3.11"
pythonPlatform = "Windows"  # "Windows", "Darwin", "All",  "Linux"
extraPaths = ["./venv/Lib/site-packages"]
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", "build", "dist"]
ignore = ["temp"]
